# vcf2ldif

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pytest.ini  .releaserc.toml  .ruff.toml  CHANGELOG.md  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yaml
.github/: template-sync.yml
.github/workflows/: CI.yml  develop.yml  on_develop.yml  on_release.yml  release.yml  schedule-update-actions.yml  semantic-pr-check.yml
docs/: modules.rst
src/vcf2ldif/: __init__.py  __main__.py  vcf2ldif.py
tests/: conftest.py  requirements.txt  test.vcf  test_functions.py  test_input.vcf  test_main.py  test_vcf2ldif.py
