[project]
name =  "vcf2ldif"
description = "This tool is designed to convert *.vcf (vCard) contact files to *.ldif file, for further creation of shared phone books on LDAP server."
dynamic = ["version"]
authors = [
    { name = "Katulos", email = "123748719+Katulos@users.noreply.github.com" }
]
maintainers = [
    { name = "Katulos", email = "123748719+Katulos@users.noreply.github.com"}
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.8",
    "phonenumbers>=9.0.17",
    "vobject>=0.9.9",
]

[project.urls]
Documentation = "https://github.com/katulos/vcf2ldif/tree/master#readme"
Home = "https://github.com/katulos/vcf2ldif"
Source = "https://github.com/katulos/vcf2ldif"
Tracker = "https://github.com/katulos/vcf2ldif/issues"

[tool.setuptools.dynamic]
version = {attr = "vcf2ldif.__version__"}

[project.scripts]
vcf2ldif= "vcf2ldif.vcf2ldif:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
